# scantailor

./: .gitignore  AutoManualMode.h  BackgroundExecutor.cpp  BubbleAnimation.cpp  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ConsoleBatch.cpp  ConsoleBatch.h  DebugImageView.cpp  DebugImagesImpl.cpp  DebugViewFactory.h  Despeckle.cpp  EstimateBackground.cpp  FileNameDisambiguator.cpp  ImageLoader.cpp  ImageLoader.h  ImageMetadataLoader.h  ImageViewBase.cpp  ImageViewBase.h  JP2Reader.cpp  JpegMetadataLoader.cpp  LoadFileTask.cpp  LoadFilesStatusDialog.cpp  MainWindow.cpp  MainWindow.h  NonOwningWidget.cpp  OrthogonalRotation.cpp  OutputFileNameGenerator.cpp  PageId.cpp  PageRange.cpp  PageSequence.cpp  PdfMetadataLoader.cpp  PdfMetadataLoader.h  PdfReader.cpp  PdfReader.h  ProcessingIndicationWidget.cpp  ProcessingTaskQueue.cpp  ProjectCreationContext.cpp  ProjectFilesDialog.cpp  (+25 more)
acceleration/opencl/khronos/CL/: cl.h  cl2.hpp
dewarping/: Curve.cpp  CylindricalSurfaceDewarper.cpp  DistortionModelBuilder.cpp  TextLineRefiner.cpp  TopBottomEdgeTracer.cpp
filters/deskew/: CacheDrivenTask.cpp  DewarpingMode.cpp  DewarpingView.cpp  Filter.cpp  ImageView.cpp  OptionsWidget.cpp  Settings.cpp  Settings.h  Task.cpp  Task.h
filters/fix_orientation/: ApplyDialog.cpp  CacheDrivenTask.cpp  OptionsWidget.cpp  Settings.cpp
filters/output/: BlackWhiteOptions.cpp  BlackWhiteOptions.h  CMakeLists.txt  CacheDrivenTask.cpp  ColorParams.cpp  ColorParams.h  DespeckleView.cpp  DespeckleView.h  FillZoneEditor.cpp  Filter.cpp  MixedOptions.cpp  MixedOptions.h  OnDemandPictureZoneEditor.cpp  OnDemandPictureZoneEditor.h  OptionsWidget.cpp  OptionsWidget.h  OutputGenerator.cpp  OutputImageParams.cpp  Params.cpp  PictureZoneEditor.cpp  RenderParams.cpp  RenderParams.h  Settings.cpp  Settings.h  TabbedImageView.cpp  TabbedImageView.h  Task.cpp  Task.h
filters/output/ui/: OutputOptionsWidget.ui
filters/page_layout/: ApplyDialog.cpp  CacheDrivenTask.cpp  Filter.cpp  ImageView.cpp  OptionsWidget.cpp  OrderByHeightProvider.cpp  OrderByWidthProvider.cpp  Settings.cpp  Settings.h
filters/page_split/: CacheDrivenTask.cpp  ImageView.cpp  LayoutType.cpp  OptionsWidget.cpp  OrderBySplitTypeProvider.cpp  PageLayout.cpp  PageLayoutEstimator.cpp  PageLayoutEstimator.h  Settings.cpp  SplitModeDialog.cpp  Task.cpp  Task.h  VertLineFinder.cpp
filters/select_content/: ApplyDialog.cpp  CMakeLists.txt  CacheDrivenTask.cpp  ContentBoxFinder.cpp  ContentBoxFinder.h  DetectionMode.cpp  DetectionMode.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OrderByHeightProvider.cpp  OrderByWidthProvider.cpp  PageFinder.cpp  PageFinder.h  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h
filters/select_content/ui/: SelectContentOptionsWidget.ui
foundation/: FastQueue.h  LineIntersectionScalar.cpp  ObjectSwapper.h  ObjectSwapperFactory.h  ObjectSwapperImplQImage.cpp  PriorityQueue.h  PropertySet.cpp  Proximity.h  ValueConv.h  XmlMarshaller.cpp
imageproc/: AbstractImageTransform.h  AffineImageTransform.cpp  AffineTransform.cpp  AffineTransformedImage.cpp  BadAllocIfNull.h  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  ConnCompEraser.cpp  ConnCompEraserExt.cpp  ConnectivityMap.cpp  DrawOver.cpp  HoughLineDetector.cpp  HoughTransform.h  InfluenceMap.cpp  LocalMinMaxGeneric.h  MaxWhitespaceFinder.cpp  MaxWhitespaceFinder.h  Morphology.cpp  PolygonRasterizer.cpp  PolygonUtils.cpp  PolynomialLine.h  PolynomialSurface.cpp  RastLineFinder.cpp  RasterOp.h  ReduceThreshold.cpp  SEDM.cpp  Scale.cpp  SeedFill.cpp  SeedFillGeneric.h  Shear.cpp  SkewFinder.cpp  WatershedSegmentation.cpp
imageproc/tests/: TestAffineTransform.cpp  TestPolygonRasterizer.cpp  TestRasterOp.cpp  TestSEDM.cpp  TestScale.cpp  TestSkewFinder.cpp  Utils.cpp
interaction/: DragWatcher.cpp  InteractionHandler.cpp  ZoomHandler.cpp
math/: ArcLengthMapper.cpp  LineBoundedByRect.cpp  PolylineIntersector.cpp  XSpline.cpp
math/adiff/: Function.cpp
math/adiff/tests/: TestHessians.cpp
math/spfit/: ConstraintSet.cpp  FrenetFrame.cpp  LinearForceBalancer.cpp  Optimizer.cpp
math/spfit/tests/: TestSqDistApproximant.cpp
packaging/windows/: CMakeLists.txt  readme.en.txt
packaging/windows/build_deps/: CMakeLists.txt  export-vars.cmake.in  generate_qt_build_script.cmake
ui/: AboutDialog.ui
zones/: BasicSplineVisualizer.cpp  EditableSpline.cpp  EditableZoneSet.h  SerializableSpline.cpp  SplineSegment.cpp  SplineVertex.cpp  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneCreationInteraction.cpp  ZoneDefaultInteraction.cpp  ZoneSet.cpp  ZoneVertexDragInteraction.cpp
